test/mutation_analysis/s0520_detect_capital/hafis/ablation_o3_full/mutants/11/result.txt
./test/mutation_analysis/s0520_detect_capital/hafis/ablation_o3_full/mutants/11/Solution.java:19: error: unreachable statement
        for (int i = 0; false; i++) {
                                    ^
1 error
